# ionosphereAI

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  2011.ini  BatchRunner.py  Detect.py  LICENSE  LICENSE.txt  LK14Apr2013.sh  LKtest.py  MHFlow.m  PatchAuroraldet.py  README.md  README.rst  RunDetectAurora.py  cam.ini  camparam.xlsx  cvops.py  cvsetup.py  dasc-fits.ini  detectaurora.py  dmc-fits.ini  dmc-gmm.ini  dmc-of.ini  dmc-tiff.ini  dmc.ini  dmc.xlsx  dmc2012.ini  dmc2017.ini  getpassivefm.py  hdf5stats.py  hst.ini  hst0.ini  isr.ini  normframe.py  profilerun.py  pyproject.toml  (+6 more)
.github/workflows/: ci.yml
archive/: LK14Apr2013.sh  LKtest.py  MHFlow.m  skeltest.m
cvhst/: cvops.py  cvsetup.py  detectaurora.py  getpassivefm.py
cviono/: __init__.py  cvops.py  cvsetup.py  detectaurora.py  getpassivefm.py  io.py  reader.py
ionosphereAI/: __init__.py  connectedComponents.py  cvops.py  cvsetup.py  getpassivefm.py  io.py  reader.py  utils.py
matlab/: CVis.m  FMbesselSidebands.m  GMMis.m  ISraw1.m  LICENSE  PlotSCR.m  README.rst  RawPlayer0.m  RunCV.m  bboxCount.m  central_diff.m  gray2rgb.m  graytoUint8.m  readFMh5.m
reference/: pickframes.py
src/ionosphereAI/: __init__.py  connectedComponents.py  cvops.py  cvsetup.py  dio.py  getpassivefm.py  reader.py  utils.py
src/ionosphereAI/detect/: __main__.py
src/ionosphereAI/tests/: test_all.py
src/ionosphereAI/tests/data/: testframes.DMCdata
tests/: Test.py  test.py  test_all.py
