[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ionosphereAI"
version = "0.9.1"
description = "detect ionospheric phenomena using machine learning algorithms"
requires-python = ">=3.10"
keywords = ["ionosphere", "aurora", "machine learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "scipy",
    "pandas",
    "numpy",
    "h5py"
]
dynamic = ["readme"]

[project.optional-dependencies]
tests = [
    "pytest",
    "flake8",
    "mypy",
    "types-pytz"
]
hist = ["histutils"]
dmc = ["dmcutils"]
plot = ["matplotlib"]
cv = ["pyoptflow", "morecvutils"]
opencv = ["opencv-python"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.mypy]
ignore_missing_imports = true
strict_optional = false
allow_redefinition = true
