[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ionosphereAI"
description = "detect ionospheric phenomena using machine learning algorithms"
requires-python = ">=3.11"
keywords = ["ionosphere", "aurora", "machine learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "scipy",
    "pandas",
    "numpy",
    "h5py",
    "astropy"
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
tests = ["pytest", "mypy"]
hist = ["histutils"]
dmc = ["dmcutils"]
plot = ["matplotlib"]
cv = ["pyoptflow", "morecvutils"]
opencv = ["opencv-python"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "ionosphereAI.__version__"}

[tool.mypy]
files = ["."]
ignore_missing_imports = true
allow_redefinition = true
install_types = true
exclude = ["^build([/\\\\]|$)"]
