[metadata]
name = cv_ionosphere
version = 0.9.1
author = Michael Hirsch, Ph.D.
url = https://github.com/scivision/cv_ionosphere
description = detect ionospheric phenomena using machine learning algorithms
keywords =
  ionosphere
  aurora
  machine learning
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Scientific/Engineering :: Visualization
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  scipy
  pandas
  numpy
  matplotlib
  h5py
  opencv-python
  morecvutils
  pyoptflow

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy
io =
  histutils
  dmcutils

[options.entry_points]
console_scripts =


[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  except RuntimeError
  except NotImplementedError
  except ImportError
  except FileNotFoundError
  except CalledProcessError
  logging.warning
  logging.error
  logging.critical
  if __name__ == .__main__.:
