[metadata]
name = ionosphereAI
version = 0.9.1
author = Michael Hirsch, Ph.D.
author_email = scivision@noreply.users.github.com
url = https://github.com/space-physics/ionosphereAI
description = detect ionospheric phenomena using machine learning algorithms
keywords =
  ionosphere
  aurora
  machine learning
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Visualization
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
packages = find:
scripts =
  BatchRunner.py
  Detect.py
  hdf5stats.py
  PatchAuroraldet.py
install_requires =
  scipy
  pandas
  numpy
  h5py
  morecvutils


[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy
io =
  matplotlib
  histutils
  dmcutils
cv =
  pyoptflow

[options.entry_points]
console_scripts =
